--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-md/icon": "^5.1.6",
+    "@react-md/theme": "^5.1.6",
+    "@react-md/typography": "^5.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "sass": "^1.70.0"
   },
   "devDependencies": {
