--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-md/theme": "^5.1.6",
     "@react-md/typography": "^5.1.6",
     "animejs": "^3.2.2",
+    "axios": "^1.6.7",
     "hamburgers": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
